--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Marsrocky
 email: jianfei_mars@hotmail.com
 description: "Jianfei from Mars"
-baseurl: ""
+baseurl: "/marsrocky.github.io"
 url: "http://Marsrocky.github.io"
 twitter_username: Marsrocky
 github_username:  Marsrocky
