--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: jianfei_mars@hotmail.com
 description: "Jianfei from Mars"
 baseurl: ""
 url: "http://Marsrocky.github.io"
+weibo_username: 2805657695
 twitter_username: Marsrocky
 github_username:  Marsrocky
 facebook_username:  jianfei.yang.526
