Add reading recommend

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ twitter_username: Marsrocky
 github_username:  Marsrocky
 facebook_username:  jianfei.yang.526
 renren_username: 263506266
+douban_username: bzyjf@126.com
 
 # Build settings
 markdown: kramdown
